--- a/package.json
+++ b/package.json
@@ -51,12 +51,15 @@
     "postcss-px2rem": "^0.3.0",
     "prompts": "^2.4.2",
     "react": "^17.0.2",
+    "react-animated-router": "^0.2.4",
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.18.2",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^5.3.0",
+    "react-transition-group": "^4.4.5",
+    "redux": "^4.1.2",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
@@ -97,6 +100,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-transition-group": "^4.4.5",
     "postcss-pxtorem": "^6.0.0"
   },
   "jest": {
