--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.0.6",
     "antd-mobile": "^5.20.0",
     "antd-mobile-icons": "^0.3.0",
+    "axios": "^0.27.2",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
@@ -37,6 +38,7 @@
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "http-proxy-middleware": "^2.0.6",
     "i18next": "^21.8.16",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
@@ -78,8 +80,9 @@
     "workbox-webpack-plugin": "^6.4.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "start": "node -r dotenv/config scripts/start.js dotenv_config_path=.env.development",
+    "start:test": "node -r dotenv/config scripts/start.js dotenv_config_path=.env.test",
+    "build:test": "node --inspect-brk -r dotenv/config scripts/build.js dotenv_config_path=.env.test",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
