--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "antd-mobile": "^5.20.0",
     "antd-mobile-icons": "^0.3.0",
     "axios": "^0.27.2",
+    "axios-retry": "^3.3.1",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
