--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
 REACT_APP_NODE_ENV = 'development'
 NODE_ENV = 'development'
 REACT_APP_CURRENTMODE = 'dev'
-REACT_APP_BASEURL = 'https://www.taobao.com'
+REACT_APP_BASEURL = 'http://8.219.190.93:9000/api/v1'
