--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-REACT_APP_NODE_ENV = 'development'
-NODE_ENV = 'development'
+REACT_APP_NODE_ENV = 'mine'
+NODE_ENV = 'mine'
 REACT_APP_CURRENTMODE = 'dev'
 REACT_APP_BASEURL = '/api'
