--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "browserslist": "^4.18.1",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "copy-to-clipboard": "^3.3.2",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
     "dotenv": "^10.0.0",
@@ -55,6 +56,7 @@
     "postcss-preset-env": "^7.0.1",
     "postcss-px2rem": "^0.3.0",
     "prompts": "^2.4.2",
+    "qrcode.react": "^3.1.0",
     "react": "^17.0.2",
     "react-animated-router": "^0.2.4",
     "react-app-polyfill": "^3.0.0",
