--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,4 @@ REACT_APP_NODE_ENV = 'mine'
 NODE_ENV = 'mine'
 REACT_APP_CURRENTMODE = 'dev'
 REACT_APP_BASEURL = '/api'
+REACT_APP_SHARE = 'http://localhost:3000'
