--- a/.env.test
+++ b/.env.test
@@ -3,3 +3,6 @@ NODE_ENV = 'development'
 REACT_APP_CURRENTMODE = 'dev'
 REACT_APP_BASEURL = 'https://www.bibitrades.com/api/v1'
 REACT_APP_SHARE = 'https://www.bibitrades.com'
+REACT_APP_COIN = 'THB'
+REACT_APP_AREA = '66'
+REACT_APP_LANGUAGE = 'th'
