--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "antd-mobile-icons": "^0.3.0",
     "axios": "^0.27.2",
     "axios-retry": "^3.3.1",
+    "axo": "^0.0.2",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
