--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "browserslist": "^4.18.1",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "compressorjs": "^1.1.1",
     "copy-to-clipboard": "^3.3.2",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
@@ -51,6 +52,7 @@
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
     "lib-flexible": "^0.3.2",
+    "lrz": "^4.9.41",
     "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^7.0.1",
     "postcss": "^8.4.4",
