--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@ REACT_APP_NODE_ENV = 'mine'
 NODE_ENV = 'mine'
 REACT_APP_CURRENTMODE = 'dev'
 REACT_APP_BASEURL = '/api'
-REACT_APP_SHARE = 'http://localhost:3000'
+REACT_APP_SHARE = 'http://192.168.31.190:3000'
 REACT_APP_COIN = 'THB'
 REACT_APP_AREA = '66'
 REACT_APP_LANGUAGE = 'th'
