--- a/.env.development
+++ b/.env.development
@@ -3,6 +3,6 @@ NODE_ENV = 'mine'
 REACT_APP_CURRENTMODE = 'dev'
 REACT_APP_BASEURL = '/api'
 REACT_APP_SHARE = 'http://192.168.31.190:3000'
-REACT_APP_COIN = 'THB'
-REACT_APP_AREA = '66'
-REACT_APP_LANGUAGE = 'th'
+REACT_APP_COIN = 'PHP'
+REACT_APP_AREA = '63'
+REACT_APP_LANGUAGE = 'en'
