--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.0.1",
     "postcss-px2rem": "^0.3.0",
+    "postcss-pxtorem": "^6.0.0",
     "prompts": "^2.4.2",
     "qrcode.react": "^3.1.0",
     "react": "^17.0.2",
