--- a/.env.test
+++ b/.env.test
@@ -5,4 +5,4 @@ REACT_APP_BASEURL = 'https://www.bibitrades.com/api/v1'
 REACT_APP_SHARE = 'https://www.bibitrades.com'
 REACT_APP_COIN = 'THB'
 REACT_APP_AREA = '66'
-REACT_APP_LANGUAGE = 'th'
+REACT_APP_LANGUAGE = 'en'
