--- a/.env.development
+++ b/.env.development
@@ -5,4 +5,5 @@ REACT_APP_BASEURL = '/api'
 REACT_APP_SHARE = 'http://192.168.31.190:3000'
 REACT_APP_COIN = 'THB'
 REACT_APP_AREA = '66'
-REACT_APP_LANGUAGE = 'th'
+REACT_APP_LANGUAGE = 'en'
+REACT_APP_LAND = '3'
