--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "start": "node -r dotenv/config scripts/start.js dotenv_config_path=.env.development",
     "start:test": "node -r dotenv/config scripts/start.js dotenv_config_path=.env.test",
     "build:th": "node -r dotenv/config scripts/build.js dotenv_config_path=.env.test",
+    "build:th-new": "node -r dotenv/config scripts/build.js dotenv_config_path=.env.th",
     "build:source": "node -r dotenv/config scripts/build.js dotenv_config_path=.env.master",
     "test": "node scripts/test.js"
   },
