--- a/.env.test
+++ b/.env.test
@@ -6,4 +6,4 @@ REACT_APP_SHARE = 'https://www.bibitrades.com'
 REACT_APP_COIN = 'THB'
 REACT_APP_AREA = '66'
 REACT_APP_LANGUAGE = 'en'
-REACR_APP_LAND = '1'
+REACT_APP_LAND = '1'
