--- a/.env.asx
+++ b/.env.asx
@@ -1,9 +1,9 @@
 REACT_APP_NODE_ENV = 'mine'
 NODE_ENV = 'mine'
 REACT_APP_CURRENTMODE = 'dev'
-REACT_APP_BASEURL = 'https://asx-trade.com'
-REACT_APP_SHARE = 'https://asx-trade.com/api/v1'
+REACT_APP_BASEURL = 'https://www.asx-trade.com/api/v1'
+REACT_APP_SHARE = 'https://www.asx-trade.com'
 REACT_APP_COIN = 'VND'
-REACT_APP_AREA = '84'
+REACT_APP_AREA = '63'
 REACT_APP_LANGUAGE = 'en'
 REACT_APP_LAND = '4'
